Update Amazon Web Scraping Project.ipynb

--- a/Amazon Web Scraping Project.ipynb
+++ b/Amazon Web Scraping Project.ipynb
@@ -211,8 +211,8 @@
      "output_type": "stream",
      "text": [
       "2022-12-17\n",
-      "Type your email here and press enter: isaakmailbox1@gmail.com\n",
-      "Type your 16 character App password and press enter: hhpvkxwxmqgyczof\n"
+      "Type your email here and press enter: xxx@gmail.com\n",
+      "Type your 16 character App password and press enter: \n"
      ]
     }
    ],
